--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.post-card {
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 240, 0.2), 0 6px 20px 0 rgba(128, 0, 0, 0.19);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-img {
+  border-radius: 50%;
+}
+
+.post-img {
+  width: 100%;
+  height: 40%;
+}
+
+.thumbsup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #cbcbcb;
+}
+
+.thumbsdown {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.posts {
+  border-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spinLoader {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: blueviolet;
+  padding: 0 40px 0 40px;
 }
